--- a/index.html
+++ b/index.html
@@ -3,43 +3,21 @@
 
 <head>
     <link href="https://unpkg.com/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3/build/global/luxon.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables/dist/js/tabulator.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
-    <style>
-        * {
-            font-family: "Roboto", sans-serif;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        #container {
-            margin: 50px auto;
-            width: 1000px;
-        }
-
-        #table {
-            width: 100%;
-        }
-
-        #search {}
-
-        #last-updated {
-            margin-bottom: 10px;
-            font-size: 14px;
-            color: #666;
-        }
-    </style>
+    <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
     <div id="container">
-        <div id="last-updated"></div>
-        <input type="text" id="search" placeholder="Filter" />
+        <div id="top-stuff">
+            <div id="last-updated"></div>
+            <input type="text" id="search" placeholder="Filter" />
+        </div>
         <div id="table"></div>
     </div>
+    <img id="hover-preview">
 </body>
 
 </html>
